src/test/ui/issues/issue-21974.stderr
error[E0283]: type annotations required: cannot resolve `&'a T: Foo`
  --> $DIR/issue-21974.rs:20:1
   |
LL | / fn foo<'a,'b,T>(x: &'a T, y: &'b T) //~ ERROR type annotations required
LL | |     where &'a T : Foo,
LL | |           &'b T : Foo
LL | | {
LL | |     x.foo();
LL | |     y.foo();
LL | | }
   | |_^
   |
note: required by `Foo`
  --> $DIR/issue-21974.rs:16:1
   |
LL | trait Foo {
   | ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0283`.
